# greenion

./: .gitignore  README.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.yml  lerna.json  package-lock.json  package.json
.husky/: commit-msg  pre-commit  pre-push
docker-resources/: .env.sample.app  .env.sample.auth  .env.sample.catalog  .env.sample.common  .gitignore  nginx.conf
greenion-agents/: Cargo.toml  README.md  build.rs  client.md  server.md
greenion-agents/certs/: docker-compose.yml  script.sh
greenion-agents/config/: client_config.toml  server_config.toml
greenion-agents/config/default/client/: client_config.toml  sanzu_client_config.toml
greenion-agents/config/default/server/: sanzu_server_config.toml  server_config.toml
greenion-agents/installer/client/: GreenionClientInstaller.wxs
greenion-agents/installer/server/: GreenionServerInstaller.wxs
greenion-agents/src/: auth.rs  client.rs  conf.rs  lib.rs  proto.rs  standalone_server.rs
greenion-agents/src/auth/: jwt.rs  x509.rs
greenion-agents/src/client/: authenticator.rs  dialer.rs  errors.rs  forwarder.rs  main_connect.rs  sanzu_client_starter.rs  server_status_handler.rs  utils.rs
greenion-agents/src/conf/: client_args.rs  client_config.rs  server_config.rs
greenion-agents/src/proto/: common.rs  messages.proto3
greenion-agents/src/standalone_server/: authenticator.rs  forwarder.rs  process_client_connection.rs  sanzu_server_starter_linux.rs  sanzu_server_starter_windows.rs  utils.rs
greenion-agents/tests/: Cargo.toml  Dockerfile.linux  run.sh  run.windows.sh  test_local.sh
greenion-agents/tests/certs/: cert.pem  docker-compose.yml  key.pem  local-jwks-server-flat-aud.patch  rootCA.crt  rootCA.key  rootCA.srl  script.sh
greenion-agents/tests/src/: main.rs
packaging/: nfpm_client.yaml  (+1 more)
(+199 files in other folders)
