[package]
name = "greenion-agents"
version = "0.1.0"
edition = "2021"
exclude = ["src/bin/old/*", "src/bin/old/**/*"]
readme = "README.md"
description = "A cross-platform remote desktop solution"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.91"
byteorder = "1.5.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
fern = "0.7.0"
humantime = "2.1.0"
jsonwebtoken = "9.3.0"
jwks = "0.1.3"
log = "0.4.22"
native-dialog = "0.7.0"
notifica = "3.0.2"
prost = "0.13.3"
reqwest = { version = "0.12.9", features = ["json"] }
rustls = "0.23.16"
rustls-pemfile = "2.2.0"
serde = "1.0.214"
tokio = { version = "1.41.0" , features = ["process", "io-util"]}
tokio-rustls = "0.26.0"
toml = "0.8.19"
url = "2.5.2"
x509-parser = { version = "0.16.0" , features = ["verify", "validate"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_RemoteDesktop",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_UI_Input_KeyboardAndMouse",
]

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"
windows-strings = "0.1.0"
windows-core = "0.58.0"

[build-dependencies]
prost-build = "0.13.3"

[dev-dependencies]
rcgen = { version = "0.13.1" , features = ["default", "crypto"]}
