[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dirs = "5.0.1"
fs_extra = "1.3.0"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
users = "0.11.0"
